#22 bugfix: fix email