@@ -10,9 +10,12 @@ import software.amazon.awssdk.services.dynamodb.model.ScanRequest;
 import software.amazon.awssdk.services.dynamodb.model.ScanResponse;
 
 import java.time.LocalDate;
+import java.time.OffsetDateTime;
 import java.time.Period;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class DynamoPdfDataService implements com.fiap.techchallenge.domain.service.PdfDataService {
@@ -36,27 +39,36 @@ public class DynamoPdfDataService implements com.fiap.techchallenge.domain.servi
 
         List<Avaliacao> itensDatabase = response.items().stream()
                 .map(this::toDomain)
-                .toList();
+                .collect(Collectors.toList());
 
+        LocalDate umaSemanaAtras = LocalDate.now().minus(Period.ofWeeks(1));
 
-        List<Avaliacao> itensSemana = itensDatabase.stream().filter(item -> {
-            if (item.getDataEnvio() != null) {
-                LocalDate date = LocalDate.parse(item.getDataEnvio());
+        List<Avaliacao> itensSemana = itensDatabase.stream()
+                .filter(item -> item.getDataEnvio() != null && !item.getDataEnvio().isEmpty())
+                .filter(item -> {
+                    try {
+                        // Tenta ler como Timestamp ISO (2025-12-24T01:12:05Z)
+                        LocalDate date = OffsetDateTime.parse(item.getDataEnvio()).toLocalDate();
+                        return date.isAfter(umaSemanaAtras);
+                    } catch (Exception e) {
+                        try {
+                            // Se falhar, tenta ler como data simples (2025-12-24)
+                            LocalDate date = LocalDate.parse(item.getDataEnvio());
+                            return date.isAfter(umaSemanaAtras);
+                        } catch (Exception e2) {
+                            return false; // Ignora registros com data inválida
+                        }
+                    }
+                }).collect(Collectors.toList());
 
-                return date.isAfter(LocalDate.now().minus(Period.ofWeeks(1)));
-            }
-
-            return false;
-        }).toList();
-
-        Double mediaNotas = itensSemana.stream()
+        double mediaNotas = itensSemana.stream()
                 .mapToInt(Avaliacao::getNota)
                 .average()
                 .orElse(0.0);
 
-        Long qtdAvaliacoes = Long.valueOf(itensSemana.size());
+        long qtdAvaliacoes = (long) itensSemana.size();
 
-        Long qtdAvaliacoesCriticas = itensSemana.stream()
+        long qtdAvaliacoesCriticas = itensSemana.stream()
                 .filter(item -> item.getNota() < 2)
                 .count();
 
@@ -65,13 +77,31 @@ public class DynamoPdfDataService implements com.fiap.techchallenge.domain.servi
 
     private Avaliacao toDomain(Map<String, AttributeValue> item) {
         return new Avaliacao(
-                item.get("FeedbackID").s(),
-                item.get("descricao").s(),
-                Integer.parseInt(item.get("nota").n()),
-                item.get("status").s(),
-                item.get("dataEnvio").s(),
-                item.get("userId").s()
+                getItemString(item, "FeedbackID", "unknown"),
+                getItemString(item, "descricao", ""),
+                getItemInteger(item, "nota", 0),
+                getItemString(item, "status", "PENDING"),
+                getItemString(item, "dataEnvio", ""),
+                getItemString(item, "userId", "anonymous")
         );
     }
 
+    private String getItemString(Map<String, AttributeValue> item, String key, String defaultValue) {
+        return Optional.ofNullable(item.get(key))
+                .map(AttributeValue::s)
+                .orElse(defaultValue);
+    }
+
+    private int getItemInteger(Map<String, AttributeValue> item, String key, int defaultValue) {
+        return Optional.ofNullable(item.get(key))
+                .map(AttributeValue::n)
+                .map(n -> {
+                    try {
+                        return Integer.parseInt(n);
+                    } catch (NumberFormatException e) {
+                        return defaultValue;
+                    }
+                })
+                .orElse(defaultValue);
+    }
 }
